--- a/landing/content/4.changelog/1.launch.md
+++ b/landing/content/4.changelog/1.launch.md
@@ -1,23 +1,25 @@
 ---
-title: "SaaS Launch 🚀"
-description: "We're excited to announce the public launch of our SaaS platform! This release lays the foundation for a modern, scalable SaaS experience. Start building your next big thing today."
+title: "Sendook Launch 🚀"
+description: "Introducing Sendook - email infrastructure for AI agents. Stop wrestling with Gmail APIs and AWS SES. Create inboxes, send emails, and receive webhooks in minutes."
 date: "2024-04-01"
 image: https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=800&q=80
 ---
 
-🚀 We're excited to announce the public launch of our SaaS platform! This milestone is the result of months of design, development, and feedback from our early users. Our goal: make it easier than ever to launch, manage, and grow your business online.
+🚀 We're excited to announce the launch of Sendook! This milestone represents months of building, testing, and learning from developers building AI agents. Our mission: eliminate the painful complexity of email infrastructure so you can focus on building intelligence.
 
-From the first line of code, we focused on speed, reliability, and a delightful user experience. Whether you're a solo founder or a growing team, our platform is built to scale with you. 💡
+Every AI agent we talked to had the same frustration: setting up email took days of configuration, OAuth flows, and MIME parsing. We built Sendook to make this instant. One API call, and your agent has a working inbox. 💡
 
-**Highlights:**
-- ⚡ Fast, responsive dashboard UI for effortless navigation
-- 🔐 Seamless onboarding and secure authentication
-- 💳 Built-in billing and subscription management with Stripe integration
-- 🎨 Modern design system powered by Nuxt UI
-- 📱 Mobile-friendly and accessible from day one
-- 📚 Helpful documentation and in-app tips
+**Launch Features:**
+- ⚡ **Instant Inbox Creation**: One API call creates a fully functional mailbox
+- 🔔 **Real-time Webhooks**: Get notified the moment emails arrive
+- 📧 **JSON-Ready Emails**: Pre-decoded, formatted, ready for your agent
+- 📤 **Send & Reply**: Simple APIs for outbound email and threading
+- 🔍 **Full-Text Search**: Query any email by any field, instantly
+- 🔐 **Secure by Default**: API key authentication, webhook signature verification
+- 📚 **Complete Documentation**: Guides, examples, and SDK reference
+- 🌐 **Open Source**: MIT licensed, self-host or use our cloud
 
-**Behind the scenes:** 🛠️
-We've invested in a robust infrastructure to ensure uptime and performance. Our team has also set up automated testing and continuous deployment, so you'll always have the latest features and fixes.
+**Built for Production:** 🛠️
+We run on battle-tested email infrastructure with spam filtering, deliverability optimization, and redundant systems. Automated testing and continuous deployment ensure reliability. Your AI agents deserve infrastructure they can depend on.
 
-We're just getting started—your feedback will help shape the future of our platform. Let us know what you think and what you'd like to see next! ✨
+This is just the beginning. We're building the email platform AI agents need to communicate at scale. Let us know what you'd like to see next! ✨
