--- a/landing/content/4.changelog/4.integrations.md
+++ b/landing/content/4.changelog/4.integrations.md
@@ -1,21 +1,43 @@
 ---
-title: "Integrations Galore"
-description: "Connect your favorite tools! We now support integrations with Slack, GitHub, and Zapier. Automate your workflow with ease."
+title: "Webhook Events & SDK Improvements"
+description: "New webhook events for delivery tracking, Python SDK launch, and enhanced error handling. Your AI agents just got smarter."
 date: "2024-07-20"
 image: https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=800&q=80
 ---
 
-🔌 Connect your SaaS workspace to the tools you love! Our new integrations make it easy to automate and extend your workflow, saving you time and reducing manual work.
+🔌 This release supercharges how your AI agents interact with email events! We've expanded webhook capabilities, launched our Python SDK, and made error handling much more robust.
 
-This release is just the beginning—integrations are now a first-class part of our platform. We've started with the most requested tools and will be adding more based on your feedback. 🗂️
+Based on feedback from teams building production AI agents, we focused on visibility, reliability, and multi-language support. These improvements make your agents more responsive and easier to debug. 🗂️
 
-**New integrations:**
-- 💬 **Slack:** Get real-time notifications and updates in your channels
-- 🐙 **GitHub:** Link commits and pull requests to your projects for better traceability
-- 🤖 **Zapier:** Automate repetitive tasks with 5,000+ apps
-- 📅 **Google Calendar:** Sync important dates and deadlines
+**New Features:**
+- 📬 **Enhanced Webhook Events:** Track `message.delivered`, `message.bounced`, `message.opened`, and `message.clicked`
+- 🐍 **Python SDK:** Official Python support with type hints, async support, and idiomatic APIs
+- 🔒 **Webhook Signature Verification:** Built-in helpers to verify webhook authenticity
+- 🚨 **Improved Error Codes:** More granular error codes for better error handling
+- 📊 **Delivery Status Tracking:** Query delivery status for any sent email
+- ⚡ **Retry Logic:** Configurable webhook retry with exponential backoff
+- 🔗 **Thread Context in Webhooks:** Full thread history included in `message.received` events
+
+**Python SDK Example:**
+```python
+from sendook import Sendook
+import asyncio
+
+client = Sendook(api_key='your-api-key')
+
+# Create inbox
+inbox = await client.inboxes.create(name='AI Support Agent')
+
+# Send email
+await client.messages.send(
+    inbox_id=inbox.id,
+    to='customer@example.com',
+    subject='Your AI-powered response',
+    body='Thanks for reaching out!'
+)
+```
 
 **Behind the scenes:** 🔧
-We built a new integrations framework to make adding and managing connections seamless. Our API is now more robust, and we're working on an integrations marketplace for even more options.
+We rebuilt our webhook delivery system for better reliability. Failed webhooks now retry with exponential backoff, and you can view delivery logs in the dashboard. The Python SDK uses the same battle-tested patterns as our Node.js SDK.
 
-More integrations are on the way—tell us which ones you want next! 📨
+More language SDKs coming soon—Go and Ruby are next! Let us know what you need. 📨
