--- a/landing/content/1.docs/1.getting-started/2.installation.md
+++ b/landing/content/1.docs/1.getting-started/2.installation.md
@@ -15,7 +15,7 @@ The fastest way to get started. No infrastructure to manage.
 
 #### 1. Sign Up
 
-Create your free account at [sendook.com/signup](/signup) - no credit card required.
+Create your free account at [sendook.com/register](https://app.sendook.com/register) - no credit card required.
 
 #### 2. Get Your API Key
 
@@ -34,14 +34,6 @@ Install the official SDK for your language:
 npm install @sendook/node-sdk
 ```
 
-```bash [Python]
-pip install sendook
-```
-
-```bash [Go]
-go get github.com/sendook/sendook-go
-```
-
 #### 4. Verify Installation
 
 Test your setup with a quick verification:
@@ -49,23 +41,7 @@ Test your setup with a quick verification:
 ```javascript [Node.js]
 import { Sendook } from '@sendook/node-sdk';
 
-const client = new Sendook({ 
-  apiKey: process.env.SENDOOK_API_KEY 
-});
-
-// Verify connection
-const organization = await client.organizations.get();
-console.log(`Connected as: ${organization.name}`);
-```
-
-```python [Python]
-from sendook import Sendook
-
-client = Sendook(api_key=os.environ['SENDOOK_API_KEY'])
-
-# Verify connection
-organization = client.organizations.get()
-print(f"Connected as: {organization.name}")
+const sendook = new Sendook(process.env.SENDOOK_API_KEY);
 ```
 
 That's it! You're ready to create inboxes and send emails.
@@ -99,20 +75,11 @@ Create a `.env` file with your configuration:
 MONGODB_URI=mongodb://localhost:27017/sendook
 
 # Email Domain
-EMAIL_DOMAIN=yourdomain.com
+DEFAULT_EMAIL_DOMAIN=yourdomain.com
 
-# API Configuration
-API_PORT=3000
-JWT_SECRET=your-secure-random-secret
-
-# SMTP Settings (for sending)
-SMTP_HOST=smtp.yourprovider.com
-SMTP_PORT=587
-SMTP_USER=your@email.com
-SMTP_PASS=your-password
-
-# Webhook Configuration
-WEBHOOK_SECRET=your-webhook-secret
+# Email provider credentials
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 ```
 
 #### 3. Start with Docker Compose
@@ -124,17 +91,14 @@ docker-compose up -d
 This starts:
 - Sendook API server
 - MongoDB database
-- SMTP receiver
-- Worker processes for webhooks
 
 #### 4. Configure DNS Records
 
 Add these DNS records to receive emails:
 
 ```text
-MX    @    10 mail.yourdomain.com
-A     mail    your-server-ip
-TXT   @    "v=spf1 mx ~all"
+MX    @    10 your-email-provider-mx-record.com
+TXT   _dmarc    "v=DMARC1; p=reject;"
 ```
 
 For DKIM, generate keys and add the provided TXT record:
@@ -146,12 +110,13 @@ docker exec sendook npm run generate-dkim
 #### 5. Create Your First Organization
 
 ```bash
-curl -X POST http://localhost:3000/api/v1/auth/signup \
+curl -X POST http://localhost:3000/auth/register \
   -H "Content-Type: application/json" \
   -d '{
+    "first_name": "John",
+    "last_name": "Doe",
     "email": "admin@yourdomain.com",
     "password": "secure-password",
-    "organizationName": "My Organization"
   }'
 ```
 
@@ -168,18 +133,9 @@ Log in to the dashboard at `http://localhost:3000` and create an API key.
 | Variable | Description | Example |
 |----------|-------------|---------|
 | `MONGODB_URI` | MongoDB connection string | `mongodb://localhost:27017/sendook` |
-| `JWT_SECRET` | Secret for JWT tokens | Random 32+ char string |
-| `EMAIL_DOMAIN` | Your email domain | `mail.example.com` |
-
-### Optional Variables
-
-| Variable | Description | Default |
-|----------|-------------|---------|
-| `API_PORT` | API server port | `3000` |
-| `SMTP_HOST` | SMTP server for sending | Required for sending |
-| `WEBHOOK_MAX_RETRIES` | Webhook retry attempts | `3` |
-| `EMAIL_RETENTION_DAYS` | Days to keep emails | `30` |
-| `MAX_ATTACHMENT_SIZE` | Max attachment size (MB) | `25` |
+| `DEFAULT_EMAIL_DOMAIN` | Your email domain | `mail.example.com` |
+| `AWS_ACCESS_KEY_ID` | AWS access key ID | `your-aws-access-key-id` |
+| `AWS_SECRET_ACCESS_KEY` | AWS secret access key | `your-aws-secret-access-key` |
 
 ---
 
