--- a/landing/content/1.docs/1.getting-started/2.installation.md
+++ b/landing/content/1.docs/1.getting-started/2.installation.md
@@ -97,7 +97,7 @@ This starts:
 Add these DNS records to receive emails:
 
 ```text
-MX    @    10 your-email-provider-mx-record.com
+MX    @    10 inbound-smtp.{your-aws-region}.amazonaws.com
 TXT   _dmarc    "v=DMARC1; p=reject;"
 ```
 
