Fix build issues

--- a/landing/content/1.docs/1.getting-started/2.installation.md
+++ b/landing/content/1.docs/1.getting-started/2.installation.md
@@ -15,7 +15,7 @@ The fastest way to get started. No infrastructure to manage.
 
 #### 1. Sign Up
 
-Create your free account at [sendook.com/signup](/signup) - no credit card required.
+Create your free account at [app.sendook.com/signup](https://app.sendook.com/signup) - no credit card required.
 
 #### 2. Get Your API Key
 
