--- a/landing/content/1.docs/3.api/1.index.md
+++ b/landing/content/1.docs/3.api/1.index.md
@@ -80,6 +80,7 @@ Explore the resource-specific guides for request and response details:
 - [Inboxes](/docs/api/inboxes)
 - [Messages](/docs/api/messages)
 - [Threads](/docs/api/threads)
+- [Webhooks](/docs/api/webhooks)
 
 Need the full SDK? Check the [Sendook Node SDK repository](https://github.com/sendook/sendook/tree/main/node-sdk) for higher-level abstractions and code samples.
 
