--- a/landing/content/1.docs/1.getting-started/1.index.md
+++ b/landing/content/1.docs/1.getting-started/1.index.md
@@ -36,31 +36,23 @@ Get started in under 5 minutes:
 
 ```bash
 # Install the SDK
-npm install @sendook/node-sdk
+npm install @sendook/node
 
 # Create an inbox and send your first email
-import { Sendook } from '@sendook/node-sdk';
+import Sendook from '@sendook/node';
 
-const client = new Sendook({ apiKey: process.env.SENDOOK_API_KEY });
+const client = new Sendook(process.env.SENDOOK_API_KEY);
 
 // Create an inbox
-const inbox = await client.inboxes.create({
+const inbox = await client.inbox.create({
   name: 'My AI Agent Inbox'
 });
 
-console.log(`Inbox created: ${inbox.email}`);
-
 // Send an email
-await client.messages.send({
+await client.inbox.message.send({
   inboxId: inbox.id,
   to: 'customer@example.com',
   subject: 'Hello from my AI agent',
   body: 'This email was sent via Sendook!'
 });
 ```
-
-## What's Next?
-
-- [Installation](/docs/getting-started/installation) - Set up Sendook and get your API keys
-- [Usage Guide](/docs/getting-started/usage) - Learn the core concepts and workflows
-- [API Reference](/docs/essentials/markdown-syntax) - Explore the complete API documentation
