--- a/landing/content/1.docs/1.getting-started/2.installation.md
+++ b/landing/content/1.docs/1.getting-started/2.installation.md
@@ -31,7 +31,7 @@ After signing up, navigate to your dashboard and create an API key:
 Install the official SDK for your language:
 
 ```bash [Node.js]
-npm install @sendook/node-sdk
+npm install @sendook/node
 ```
 
 #### 4. Verify Installation
@@ -39,7 +39,7 @@ npm install @sendook/node-sdk
 Test your setup with a quick verification:
 
 ```javascript [Node.js]
-import { Sendook } from '@sendook/node-sdk';
+import Sendook from '@sendook/node';
 
 const sendook = new Sendook(process.env.SENDOOK_API_KEY);
 ```
@@ -142,5 +142,3 @@ Log in to the dashboard at `http://localhost:3000` and create an API key.
 ## Next Steps
 
 - [Usage Guide](/docs/getting-started/usage) - Learn core concepts
-- [API Reference](/docs/essentials/markdown-syntax) - Explore the API
-- [Webhook Setup](/docs/essentials/code-blocks) - Configure webhooks
