change inbox benavior, update apis, docs, tests

--- a/landing/content/1.docs/1.getting-started/1.index.md
+++ b/landing/content/1.docs/1.getting-started/1.index.md
@@ -44,9 +44,7 @@ import Sendook from '@sendook/node';
 const client = new Sendook(process.env.SENDOOK_API_KEY);
 
 // Create an inbox
-const inbox = await client.inbox.create({
-  name: 'My AI Agent Inbox'
-});
+const inbox = await client.inbox.create();
 
 // Send an email
 await client.inbox.message.send({
