--- a/landing/content/1.docs/2.api/4.inboxes.md
+++ b/landing/content/1.docs/2.api/4.inboxes.md
@@ -24,14 +24,14 @@ Inboxes represent individual mailboxes inside your organization. Each inbox can 
 
 | Field | Type | Required | Description |
 | ----- | ---- | -------- | ----------- |
-| `name` | string | Yes | Friendly label for dashboards and logs. |
+| `name` | string | No | Optional display name for the email. |
 | `email` | string | No | Custom email address; auto-generated if omitted. |
 
 ### Response `201 Created`
 
 ```json
 {
-  "id": "ibox_01J3ZKZ0BRQ9SSJK1GRSCX4N4Z",
+  "id": "01J3ZKZ0BRQ9SSJK1GRSCX4N4Z",
   "name": "Customer Success Bot",
   "email": "cs-bot@agents.example.com",
   "createdAt": "2024-10-10T19:12:42Z"
